[package]
name = "tnb"
version = "0.1.1"
authors = ["wint3rmute <mateusz.baczek1998@gmail.com>"]
edition = "2021"
description = "command | tnb - pipe your commands to your Telegram Notifications Bot"
license = "WTFPL"
homepage = "https://github.com/Wint3rmute/tnb"
repository = "https://github.com/Wint3rmute/tnb"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "0.11.2", features = ["tls", "json"] }
rust-ini = "0.13"
dirs = "2.0.2"

