[package]
name = "tnb"
version = "1.0.0"
authors = ["wint3rmute <mateusz.baczek1998@gmail.com>"]
edition = "2021"
description = "command | tnb - pipe your commands to your Telegram Notifications Bot"
license = "WTFPL"
homepage = "https://github.com/Wint3rmute/tnb"
repository = "https://github.com/Wint3rmute/tnb"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.5.0", features = ["tls"], default-features = false }
dirs = { version = "4.0.0", default-features = false }
nanoserde = { version = "0.1.30", default-features = false }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
