[package]
name = "tnb"
version = "2.0.0"
authors = ["wint3rmute <mateusz.baczek1998@gmail.com>"]
edition = "2021"
description = "command | tnb - pipe your commands to your Telegram Notifications Bot"
license = "WTFPL"
homepage = "https://github.com/Wint3rmute/tnb"
repository = "https://github.com/Wint3rmute/tnb"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ureq = { version = "2.4.0", features = ["tls", "json"] }
dirs = "4.0.0"
serde_json = "1.0.85"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
